--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,9 @@
         tools:targetApi="31">
         <activity
             android:name=".MonthActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:theme="@style/Theme.AnimoCalendar.NoActionBar"
+        />
         <activity
             android:name=".MainActivity"
             android:exported="true"
