turned AddTask to an activity, however other fields are not yet registered (prio, category, host)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -65,6 +65,9 @@
         <activity
             android:name=".ViewTaskActivity"
             android:exported="false" />
+        <activity
+            android:name=".AddTaskActivity"
+            android:exported="false" />
 
         <meta-data
             android:name="preloaded_fonts"
