--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -66,7 +66,7 @@
             android:name=".ViewTaskActivity"
             android:exported="false" />
         <activity
-            android:name=".AddTaskActivity"
+            android:name=".CreateTaskActivity"
             android:exported="false" />
 
         <meta-data
